@@ -84,12 +84,12 @@ EOW
         "Dan Book <dbook\@cpan.org>"
       ],
       "dist_name" => "Minion-Backend-SQLite",
-      "dist_version" => "2.002",
+      "dist_version" => "2.003",
       "license" => "artistic_2",
       "module_name" => "Minion::Backend::SQLite",
       "recursive_test_files" => 1,
       "requires" => {
-        "Minion" => "7.04",
+        "Minion" => "7.05",
         "Mojo::SQLite" => "3.000",
         "Mojolicious" => "7.29",
         "Sys::Hostname" => 0,
