@@ -742,8 +742,11 @@ is $info->{retries}, 2,                   'job has been retried twice';
 is $info->{state},   'finished',          'right state';
 is $info->{queue},   'minion_foreground', 'right queue';
 $id = $minion->enqueue('fail');
-$minion->foreground($id);
+eval { $minion->foreground($id) };
+like $@, qr/Intentional failure!/, 'right error';
 $info = $minion->job($id)->info;
+ok $info->{worker}, 'has worker';
+ok !$minion->backend->worker_info($info->{worker}), 'not registered';
 is $info->{retries}, 1,                        'job has been retried';
 is $info->{state},   'failed',                 'right state';
 is $info->{queue},   'minion_foreground',      'right queue';
