@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Fix tests for rethrown job exceptions in Minion 7.05.
 
 2.002     2017-08-05 12:01:08 EDT
   - Add id option to dequeue method to support dequeueing a specific job.
